fixed alignment of top section on

--- a/cards.css
+++ b/cards.css
@@ -109,7 +109,7 @@ blockquote {
   padding: 15px;
   padding-left: 30px;
   padding-right: 30px;
-  background-color: rgba(22, 20, 23, 0.475);
+  background-color: rgba(4, 30, 10, 0.475);
   border-left: #00FF55;
   border-left-color: #00FF55;
   border-left-width: 3px;
